--- a/training/dpo-align-llms-in-2024-with-trl.ipynb
+++ b/training/dpo-align-llms-in-2024-with-trl.ipynb
@@ -29,17 +29,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install Pytorch & other libraries\n",
-    "!pip install \"torch==2.1.2\" tensorboard\n",
+    "# # Install Pytorch & other libraries\n",
+    "# !pip install \"torch==2.1.2\" tensorboard\n",
     "\n",
-    "# Install Hugging Face libraries\n",
+    "# # Install Hugging Face libraries\n",
     "!pip install  --upgrade \\\n",
     "  \"transformers[sentencepiece]==4.37.2\" \\\n",
     "  \"datasets==2.16.1\" \\\n",
     "  \"accelerate==0.26.1\" \\\n",
     "  \"evaluate==0.4.1\" \\\n",
     "  \"bitsandbytes==0.42.0\" \\\n",
-    "  \"trl==0.7.10\" \\\n",
+    "  \"trl==0.7.11\" \\\n",
     "  \"peft==0.8.2\" "
    ]
   },
@@ -241,7 +241,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c828f27526f24a78a2d0d37acb023fd6",
+       "model_id": "26c72f25c4164232930ed9fcf733afef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -279,14 +279,15 @@
     "model = AutoModelForCausalLM.from_pretrained(\n",
     "    model_id,\n",
     "    device_map=\"auto\",\n",
+    "    use_cache=False, \n",
     "    attn_implementation=\"flash_attention_2\",\n",
     "    torch_dtype=torch.bfloat16,\n",
     "    quantization_config=bnb_config\n",
     ")\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
-    "tokenizer.padding_side = 'right' # to prevent warnings\n",
-    "tokenizer.truncation_side = 'right' # to prevent cutting off last generation\n",
-    "tokenizer.pad_token = tokenizer.eos_token"
+    "tokenizer.pad_token = tokenizer.eos_token\n",
+    "tokenizer.padding_side = 'left' # to prevent errors with FA\n",
+    "tokenizer.truncation_side = 'right' # to prevent cutting off last generation"
    ]
   },
   {
@@ -382,26 +383,28 @@
     "args = TrainingArguments(\n",
     "    output_dir=\"doplhin-dpo\",               # directory to save and repository id\n",
     "    num_train_epochs=2,                     # number of training epochs\n",
-    "    per_device_train_batch_size=12,          # batch size per device during training\n",
+    "    per_device_train_batch_size=12,         # batch size per device during training\n",
     "    per_device_eval_batch_size=4,           # batch size for evaluation\n",
     "    gradient_accumulation_steps=1,          # number of steps before performing a backward/update pass\n",
     "    gradient_checkpointing=True,            # use gradient checkpointing to save memory\n",
     "    optim=\"adamw_torch_fused\",              # use fused adamw optimizer\n",
-    "    logging_steps=25,                       # log every 25 steps\n",
-    "    save_strategy=\"epoch\",                  # save checkpoint every epoch\n",
-    "    evaluation_strategy=\"epoch\",            # evaluate at the end of each epoch\n",
     "    learning_rate=2e-4,                     # learning rate, based on QLoRA paper\n",
-    "    bf16=True,                              # use bfloat16 precision\n",
-    "    tf32=True,                              # use tf32 precision\n",
     "    max_grad_norm=0.3,                      # max gradient norm based on QLoRA paper\n",
     "    warmup_ratio=0.1,                       # warmup ratio based on QLoRA paper\n",
     "    lr_scheduler_type=\"cosine\",             # use cosine learning rate scheduler\n",
+    "    logging_steps=25,                       # log every 25 steps\n",
+    "    save_steps=500,                         # when to save checkpoint\n",
+    "    save_total_limit=2,                     # limit the total amount of checkpoints\n",
+    "    evaluation_strategy=\"steps\",            # evaluate every 1000 steps\n",
+    "    eval_steps=700,                         # when to evaluate\n",
+    "    bf16=True,                              # use bfloat16 precision\n",
+    "    tf32=True,                              # use tf32 precision\n",
     "    push_to_hub=False,                      # push model to hub\n",
     "    report_to=\"tensorboard\",                # report metrics to tensorboard\n",
     ")\n",
     "\n",
     "dpo_args = {\n",
-    "    \"beta\": 0.05,                           # The beta factor in DPO loss. Higher beta means less divergence\n",
+    "    \"beta\": 0.01,                           # The beta factor in DPO loss. Higher beta means less divergence\n",
     "    \"loss_type\": \"sigmoid\"                  # The loss type for DPO.\n",
     "}"
    ]
@@ -422,7 +425,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/fsx/philipp/conda/envs/dev/lib/python3.10/site-packages/trl/trainer/dpo_trainer.py:314: UserWarning: When using DPODataCollatorWithPadding, you should set `remove_unused_columns=False` in your TrainingArguments we have set it for you, but you should do it yourself in the future.\n",
+      "/fsx/philipp/conda/envs/dev/lib/python3.10/site-packages/trl/trainer/dpo_trainer.py:328: UserWarning: When using DPODataCollatorWithPadding, you should set `remove_unused_columns=False` in your TrainingArguments we have set it for you, but you should do it yourself in the future.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -462,13 +465,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "`use_cache=True` is incompatible with gradient checkpointing. Setting `use_cache=False`...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
       "/fsx/philipp/conda/envs/dev/lib/python3.10/site-packages/torch/utils/checkpoint.py:429: UserWarning: torch.utils.checkpoint: please pass in use_reentrant=True or use_reentrant=False explicitly. The default value of use_reentrant will be updated to be False in the future. To maintain current behavior, pass use_reentrant=True. It is recommended that you use use_reentrant=False. Refer to docs for more details on the differences between the two variants.\n",
       "  warnings.warn(\n",
       "The input hidden states seems to be silently casted in float32, this might be related to the fact you have upcasted embedding or layer norm layers in float32. We will cast back the input in torch.bfloat16.\n",
@@ -483,18 +479,52 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='812' max='1834' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [ 812/1834 1:34:35 < 1:59:20, 0.14 it/s, Epoch 0.88/2]\n",
+       "      <progress value='1834' max='1834' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [1834/1834 3:56:45, Epoch 2/2]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        " <tr style=\"text-align: left;\">\n",
-       "      <th>Epoch</th>\n",
+       "      <th>Step</th>\n",
        "      <th>Training Loss</th>\n",
        "      <th>Validation Loss</th>\n",
+       "      <th>Rewards/chosen</th>\n",
+       "      <th>Rewards/rejected</th>\n",
+       "      <th>Rewards/accuracies</th>\n",
+       "      <th>Rewards/margins</th>\n",
+       "      <th>Logps/rejected</th>\n",
+       "      <th>Logps/chosen</th>\n",
+       "      <th>Logits/rejected</th>\n",
+       "      <th>Logits/chosen</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>700</td>\n",
+       "      <td>9.647700</td>\n",
+       "      <td>9.186751</td>\n",
+       "      <td>-23.508139</td>\n",
+       "      <td>-17.228384</td>\n",
+       "      <td>0.324491</td>\n",
+       "      <td>-6.279755</td>\n",
+       "      <td>-2040.734253</td>\n",
+       "      <td>-2708.581543</td>\n",
+       "      <td>-2.535598</td>\n",
+       "      <td>-2.630497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1400</td>\n",
+       "      <td>7.166900</td>\n",
+       "      <td>7.341058</td>\n",
+       "      <td>-25.813290</td>\n",
+       "      <td>-20.928732</td>\n",
+       "      <td>0.327762</td>\n",
+       "      <td>-4.884558</td>\n",
+       "      <td>-2410.768799</td>\n",
+       "      <td>-2939.096680</td>\n",
+       "      <td>-2.846645</td>\n",
+       "      <td>-2.860375</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
       ],
@@ -504,13 +534,31 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/fsx/philipp/conda/envs/dev/lib/python3.10/site-packages/torch/utils/checkpoint.py:429: UserWarning: torch.utils.checkpoint: please pass in use_reentrant=True or use_reentrant=False explicitly. The default value of use_reentrant will be updated to be False in the future. To maintain current behavior, pass use_reentrant=True. It is recommended that you use use_reentrant=False. Refer to docs for more details on the differences between the two variants.\n",
+      "  warnings.warn(\n",
+      "/fsx/philipp/conda/envs/dev/lib/python3.10/site-packages/torch/utils/checkpoint.py:61: UserWarning: None of the inputs have requires_grad=True. Gradients will be None\n",
+      "  warnings.warn(\n",
+      "/fsx/philipp/conda/envs/dev/lib/python3.10/site-packages/torch/utils/checkpoint.py:429: UserWarning: torch.utils.checkpoint: please pass in use_reentrant=True or use_reentrant=False explicitly. The default value of use_reentrant will be updated to be False in the future. To maintain current behavior, pass use_reentrant=True. It is recommended that you use use_reentrant=False. Refer to docs for more details on the differences between the two variants.\n",
+      "  warnings.warn(\n",
+      "/fsx/philipp/conda/envs/dev/lib/python3.10/site-packages/torch/utils/checkpoint.py:61: UserWarning: None of the inputs have requires_grad=True. Gradients will be None\n",
+      "  warnings.warn(\n",
+      "/fsx/philipp/conda/envs/dev/lib/python3.10/site-packages/torch/utils/checkpoint.py:429: UserWarning: torch.utils.checkpoint: please pass in use_reentrant=True or use_reentrant=False explicitly. The default value of use_reentrant will be updated to be False in the future. To maintain current behavior, pass use_reentrant=True. It is recommended that you use use_reentrant=False. Refer to docs for more details on the differences between the two variants.\n",
+      "  warnings.warn(\n",
+      "/fsx/philipp/conda/envs/dev/lib/python3.10/site-packages/torch/utils/checkpoint.py:61: UserWarning: None of the inputs have requires_grad=True. Gradients will be None\n",
+      "  warnings.warn(\n"
+     ]
     }
    ],
    "source": [
     "# start training, the model will be automatically saved to the hub and the output directory\n",
     "trainer.train()\n",
     "\n",
-    "# save model \n",
+    "# save model at the end of training\n",
     "trainer.save_model()"
    ]
   },
@@ -584,15 +632,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dcc077ee43ef4156ab459404f5711969",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/fsx/philipp/conda/envs/dev/lib/python3.10/site-packages/torch/_utils.py:831: UserWarning: TypedStorage is deprecated. It will be removed in the future and UntypedStorage will be the only storage class. This should only matter to you if you are using storages directly.  To access UntypedStorage directly, use tensor.untyped_storage() instead of tensor.storage()\n",
+      "  return self.fget.__get__(instance, owner)()\n",
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n",
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n",
+      "The model 'PeftModelForCausalLM' is not supported for text-generation. Supported models are ['BartForCausalLM', 'BertLMHeadModel', 'BertGenerationDecoder', 'BigBirdForCausalLM', 'BigBirdPegasusForCausalLM', 'BioGptForCausalLM', 'BlenderbotForCausalLM', 'BlenderbotSmallForCausalLM', 'BloomForCausalLM', 'CamembertForCausalLM', 'LlamaForCausalLM', 'CodeGenForCausalLM', 'CpmAntForCausalLM', 'CTRLLMHeadModel', 'Data2VecTextForCausalLM', 'ElectraForCausalLM', 'ErnieForCausalLM', 'FalconForCausalLM', 'FuyuForCausalLM', 'GitForCausalLM', 'GPT2LMHeadModel', 'GPT2LMHeadModel', 'GPTBigCodeForCausalLM', 'GPTNeoForCausalLM', 'GPTNeoXForCausalLM', 'GPTNeoXJapaneseForCausalLM', 'GPTJForCausalLM', 'LlamaForCausalLM', 'MarianForCausalLM', 'MBartForCausalLM', 'MegaForCausalLM', 'MegatronBertForCausalLM', 'MistralForCausalLM', 'MixtralForCausalLM', 'MptForCausalLM', 'MusicgenForCausalLM', 'MvpForCausalLM', 'OpenLlamaForCausalLM', 'OpenAIGPTLMHeadModel', 'OPTForCausalLM', 'PegasusForCausalLM', 'PersimmonForCausalLM', 'PhiForCausalLM', 'PLBartForCausalLM', 'ProphetNetForCausalLM', 'QDQBertLMHeadModel', 'Qwen2ForCausalLM', 'ReformerModelWithLMHead', 'RemBertForCausalLM', 'RobertaForCausalLM', 'RobertaPreLayerNormForCausalLM', 'RoCBertForCausalLM', 'RoFormerForCausalLM', 'RwkvForCausalLM', 'Speech2Text2ForCausalLM', 'TransfoXLLMHeadModel', 'TrOCRForCausalLM', 'WhisperForCausalLM', 'XGLMForCausalLM', 'XLMWithLMHeadModel', 'XLMProphetNetForCausalLM', 'XLMRobertaForCausalLM', 'XLMRobertaXLForCausalLM', 'XLNetLMHeadModel', 'XmodForCausalLM'].\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from peft import AutoPeftModelForCausalLM\n",
     "from transformers import AutoTokenizer, pipeline \n",
     "\n",
-    "peft_model_id = \"./code-llama-7b-text-to-sql\"\n",
+    "peft_model_id = \"/fsx/philipp/doplhin-dpo\"\n",
     "\n",
     "# Load Model with PEFT adapter\n",
     "model = AutoPeftModelForCausalLM.from_pretrained(\n",
@@ -600,6 +674,7 @@
     "  device_map=\"auto\",\n",
     "  torch_dtype=torch.float16\n",
     ")\n",
+    "tokenizer = AutoTokenizer.from_pretrained(peft_model_id)\n",
     "# load into pipeline\n",
     "pipe = pipeline(\"text-generation\", model=model, tokenizer=tokenizer)"
    ]
@@ -613,16 +688,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "prompts = [\n",
     "  \"A rectangular garden has a length of 25 feet and a width of 15 feet. If you want to build a fence around the entire garden, how many feet of fencing will you need?\",\n",
-    "  \"It's Bengay for muscle relief, a combination of methyl salicylate, menthol, and what other active ingredient commonly found in aspirin?\",\n",
-    "  \"Evaluate the expression (9 / 3 * 5) - 2^3 + 6.\",\n",
-    "  \"What occurs when you wear a crown?\",\n",
-    "  \"How can i get rid of llamas in my backyard?\"\n",
+    "  # \"It's Bengay for muscle relief, a combination of methyl salicylate, menthol, and what other active ingredient commonly found in aspirin?\",\n",
+    "  # \"Evaluate the expression (9 / 3 * 5) - 2^3 + 6.\",\n",
+    "  # \"What occurs when you wear a crown?\",\n",
+    "  # \"How can i get rid of llamas in my backyard?\"\n",
     "]"
    ]
   },
@@ -635,9 +710,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/fsx/philipp/conda/envs/dev/lib/python3.10/site-packages/transformers/generation/configuration_utils.py:392: UserWarning: `do_sample` is set to `False`. However, `temperature` is set to `0.1` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `temperature`.\n",
+      "  warnings.warn(\n",
+      "/fsx/philipp/conda/envs/dev/lib/python3.10/site-packages/transformers/generation/configuration_utils.py:397: UserWarning: `do_sample` is set to `False`. However, `top_p` is set to `0.1` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `top_p`.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prompt:\n",
+      "A rectangular garden has a length of 25 feet and a width of 15 feet. If you want to build a fence around the entire garden, how many feet of fencing will you need?\n",
+      "Generated Answer:\n",
+      "the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the the,,,,,,,,,,,,,,,,,,,,,,,,,\n",
+      "==============================\n"
+     ]
+    }
+   ],
    "source": [
     "for prompt in prompts:\n",
     "  outputs = pipe(prompt, max_new_tokens=1024, do_sample=False, temperature=0.1, top_k=50, top_p=0.1, eos_token_id=tokenizer.eos_token_id, pad_token_id=tokenizer.pad_token_id)\n",
