--- a/training/dpo-align-llms-in-2024-with-trl.ipynb
+++ b/training/dpo-align-llms-in-2024-with-trl.ipynb
@@ -223,6 +223,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -369,7 +376,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before we can start our training we need to define the hyperparameters (`TrainingArguments`), DPO parameters and find the prompt and max sequence length. "
+    "Before we can start our training we need to define the hyperparameters (`TrainingArguments`), DPO parameters and find the prompt and max sequence length. \n",
+    "\n",
+    "\n",
+    "_Note: 10-100x smaller learning rate\n",
+    "\n",
+    "Bigger beta the more away\n",
+    "_"
    ]
   },
   {
@@ -458,102 +471,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/fsx/philipp/conda/envs/dev/lib/python3.10/site-packages/torch/utils/checkpoint.py:429: UserWarning: torch.utils.checkpoint: please pass in use_reentrant=True or use_reentrant=False explicitly. The default value of use_reentrant will be updated to be False in the future. To maintain current behavior, pass use_reentrant=True. It is recommended that you use use_reentrant=False. Refer to docs for more details on the differences between the two variants.\n",
-      "  warnings.warn(\n",
-      "The input hidden states seems to be silently casted in float32, this might be related to the fact you have upcasted embedding or layer norm layers in float32. We will cast back the input in torch.bfloat16.\n",
-      "/fsx/philipp/conda/envs/dev/lib/python3.10/site-packages/torch/utils/checkpoint.py:61: UserWarning: None of the inputs have requires_grad=True. Gradients will be None\n",
-      "  warnings.warn(\n",
-      "Could not estimate the number of tokens of the input, floating-point operations will not be computed\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='1834' max='1834' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [1834/1834 3:56:45, Epoch 2/2]\n",
-       "    </div>\n",
-       "    <table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       " <tr style=\"text-align: left;\">\n",
-       "      <th>Step</th>\n",
-       "      <th>Training Loss</th>\n",
-       "      <th>Validation Loss</th>\n",
-       "      <th>Rewards/chosen</th>\n",
-       "      <th>Rewards/rejected</th>\n",
-       "      <th>Rewards/accuracies</th>\n",
-       "      <th>Rewards/margins</th>\n",
-       "      <th>Logps/rejected</th>\n",
-       "      <th>Logps/chosen</th>\n",
-       "      <th>Logits/rejected</th>\n",
-       "      <th>Logits/chosen</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>700</td>\n",
-       "      <td>9.647700</td>\n",
-       "      <td>9.186751</td>\n",
-       "      <td>-23.508139</td>\n",
-       "      <td>-17.228384</td>\n",
-       "      <td>0.324491</td>\n",
-       "      <td>-6.279755</td>\n",
-       "      <td>-2040.734253</td>\n",
-       "      <td>-2708.581543</td>\n",
-       "      <td>-2.535598</td>\n",
-       "      <td>-2.630497</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1400</td>\n",
-       "      <td>7.166900</td>\n",
-       "      <td>7.341058</td>\n",
-       "      <td>-25.813290</td>\n",
-       "      <td>-20.928732</td>\n",
-       "      <td>0.327762</td>\n",
-       "      <td>-4.884558</td>\n",
-       "      <td>-2410.768799</td>\n",
-       "      <td>-2939.096680</td>\n",
-       "      <td>-2.846645</td>\n",
-       "      <td>-2.860375</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table><p>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/fsx/philipp/conda/envs/dev/lib/python3.10/site-packages/torch/utils/checkpoint.py:429: UserWarning: torch.utils.checkpoint: please pass in use_reentrant=True or use_reentrant=False explicitly. The default value of use_reentrant will be updated to be False in the future. To maintain current behavior, pass use_reentrant=True. It is recommended that you use use_reentrant=False. Refer to docs for more details on the differences between the two variants.\n",
-      "  warnings.warn(\n",
-      "/fsx/philipp/conda/envs/dev/lib/python3.10/site-packages/torch/utils/checkpoint.py:61: UserWarning: None of the inputs have requires_grad=True. Gradients will be None\n",
-      "  warnings.warn(\n",
-      "/fsx/philipp/conda/envs/dev/lib/python3.10/site-packages/torch/utils/checkpoint.py:429: UserWarning: torch.utils.checkpoint: please pass in use_reentrant=True or use_reentrant=False explicitly. The default value of use_reentrant will be updated to be False in the future. To maintain current behavior, pass use_reentrant=True. It is recommended that you use use_reentrant=False. Refer to docs for more details on the differences between the two variants.\n",
-      "  warnings.warn(\n",
-      "/fsx/philipp/conda/envs/dev/lib/python3.10/site-packages/torch/utils/checkpoint.py:61: UserWarning: None of the inputs have requires_grad=True. Gradients will be None\n",
-      "  warnings.warn(\n",
-      "/fsx/philipp/conda/envs/dev/lib/python3.10/site-packages/torch/utils/checkpoint.py:429: UserWarning: torch.utils.checkpoint: please pass in use_reentrant=True or use_reentrant=False explicitly. The default value of use_reentrant will be updated to be False in the future. To maintain current behavior, pass use_reentrant=True. It is recommended that you use use_reentrant=False. Refer to docs for more details on the differences between the two variants.\n",
-      "  warnings.warn(\n",
-      "/fsx/philipp/conda/envs/dev/lib/python3.10/site-packages/torch/utils/checkpoint.py:61: UserWarning: None of the inputs have requires_grad=True. Gradients will be None\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# start training, the model will be automatically saved to the hub and the output directory\n",
     "trainer.train()\n",
