--- a/training/dpo-align-llms-in-2024-with-trl.ipynb
+++ b/training/dpo-align-llms-in-2024-with-trl.ipynb
@@ -365,7 +365,7 @@
     "\n",
     "args = TrainingArguments(\n",
     "    output_dir=\"doplhin-dpo\",               # directory to save and repository id\n",
-    "    num_train_epochs=2,                     # number of training epochs\n",
+    "    num_train_epochs=1,                     # number of training epochs\n",
     "    per_device_train_batch_size=12,         # batch size per device during training\n",
     "    per_device_eval_batch_size=4,           # batch size for evaluation\n",
     "    gradient_accumulation_steps=1,          # number of steps before performing a backward/update pass\n",
@@ -419,7 +419,7 @@
     "    max_prompt_length=prompt_length,\n",
     "    beta=dpo_args[\"beta\"],\n",
     "    loss_type=dpo_args[\"loss_type\"],\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -450,7 +450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The training with Flash Attention for 2 epochs with a dataset of ~10k samples took ~02:12:00 on 1x H100 GPU. You should be able to run the training on a `g5.2xlarge` instance by reducing the batch_size (est. to 1) and maybe the max_seq_length (est. to 1512)."
+    "The training with Flash Attention for 1 epochs with a dataset of ~10k samples took ~01:30:00 on 1x H100 GPU. You should be able to run the training on a `g5.2xlarge` instance by reducing the batch_size (est. to 1) and maybe the max_seq_length (est. to 1512)."
    ]
   },
   {
@@ -524,6 +524,7 @@
     "# Path to saved peft adapter model\n",
     "# peft_model_id = args.output_dir # or\n",
     "peft_model_id = \"./doplhin-dpo\" \n",
+    "peft_model_id = \"./checkpoint-1000\" \n",
     "\n",
     "# Load Model with PEFT adapter\n",
     "model = AutoPeftModelForCausalLM.from_pretrained(\n",
@@ -571,7 +572,7 @@
    "source": [
     "for prompt in prompts:\n",
     "  messages = pipe.tokenizer.apply_chat_template([{\"role\":\"user\", \"content\": prompt}], tokenize=False)\n",
-    "  outputs = pipe(prompt, max_new_tokens=1024, do_sample=True, temperature=1.0, top_k=50, top_p=0.9, eos_token_id=tokenizer.eos_token_id, pad_token_id=tokenizer.pad_token_id)\n",
+    "  outputs = pipe(prompt, max_new_tokens=2048, do_sample=True, temperature=1.0, top_k=50, top_p=0.9, eos_token_id=tokenizer.eos_token_id, pad_token_id=tokenizer.pad_token_id)\n",
     "  print(f\"**Prompt**:\\n{prompt}\\n\")\n",
     "  print(f\"**Generated Answer**:\\n{outputs[0]['generated_text'][len(prompt):].strip()}\")\n",
     "  print(\"===\" * 10)"
@@ -777,9 +778,7 @@
     "\n",
     "By using DPO we were able to achieve a win-rate of 0.5875 compared to 0.4125 with the SFT model. This means by applying DPO we tuned our model to generate responses, which are more aligned with what humans/AI would prefer. This is not optimal yet, but it's a good start. \n",
     "\n",
-    "Since the guide is only a starting point, you should consider additional evaluation methods, e.g. human evaluation or instruction-following capabilities.\n",
-    "\n",
-    "Additionally, I want to mention that we only trained on ~10k samples for 2 epochs. This means we might not have reached the full potential of the model. You should consider training for more epochs and on a larger dataset to improve the model further. "
+    "Since the guide is only a starting point, you should consider additional evaluation methods, e.g. human evaluation or instruction-following capabilities. This means we might not have reached the full potential of the model. You should consider training for more epochs and on a larger dataset to improve the model further. "
    ]
   },
   {
