--- a/training/dpo-align-llms-in-2024-with-trl.ipynb
+++ b/training/dpo-align-llms-in-2024-with-trl.ipynb
@@ -32,10 +32,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Install Pytorch & other libraries\n",
+    "# Install Pytorch & other libraries\n",
     "# !pip install \"torch==2.1.2\" tensorboard\n",
     "\n",
-    "# # Install Hugging Face libraries\n",
+    "# Install Hugging Face libraries\n",
     "!pip install  --upgrade \\\n",
     "  \"transformers[sentencepiece]==4.37.2\" \\\n",
     "  \"datasets==2.16.1\" \\\n",
@@ -43,7 +43,8 @@
     "  \"evaluate==0.4.1\" \\\n",
     "  \"bitsandbytes==0.42.0\" \\\n",
     "  \"trl==0.7.11\" \\\n",
-    "  \"peft==0.8.2\" "
+    "  \"peft==0.8.2\" \\\n",
+    "  \"pillow\""
    ]
   },
   {
@@ -274,9 +275,7 @@
    "source": [
     "Compared to the `SFTTrainer` the DPOTrainer has two parameter related to dataset sizing with `max_prompt_length` and `max_length`. The `max_prompt_length` is the maximum length of the prompt and the `max_length` is the maximum length of the prompt + chosen or rejected response. Those are used for tokenization, padding and trunctation. This means if we set those wrongly our data will be potentially cut off, but if we set them too high we will waste memory and time. \n",
     "\n",
-    "The [Alignment Handbook](https://github.com/huggingface/alignment-handbook) when with the `max_prompt_length` of 512 and `max_length` of 1024 combining it with the truncation side left (90% of data samples where in that range). Truncation side left  means the beginning will be removed.\n",
-    "\n",
-    "In our example we want to cover the 99% percentile and filter out longer samples, rather than truncating."
+    "The [Alignment Handbook](https://github.com/huggingface/alignment-handbook) when with the `max_prompt_length` of 512 and `max_length` of 1024 combining it with the truncation side left (90% of data samples where in that range). Truncation side left  means the beginning will be removed so we keep the important assistant response. In our example we want to cover the ~97% percentile and filter out longer samples, rather than truncating."
    ]
   },
   {
@@ -288,10 +287,10 @@
     "#### COMMENT IN TO RECALCULATE MAX LENGTHS ####\n",
     "# from numpy import percentile\n",
     "\n",
-    "# # lets find the p99 length of the prompt \n",
-    "# prompt_length = int(percentile([len(tokenizer(x)[\"input_ids\"]) for x in train_dataset[\"prompt\"]], 99))\n",
-    "# max_seq_length_chosen = int(percentile([len(tokenizer(x[\"prompt\"] + x[\"chosen\"])[\"input_ids\"]) for x in train_dataset], 99))\n",
-    "# max_seq_length_rejected = int(percentile([len(tokenizer(x[\"prompt\"] + x[\"rejected\"])[\"input_ids\"]) for x in train_dataset], 99))\n",
+    "# # lets find the p95 length of the prompt \n",
+    "# prompt_length = int(percentile([len(tokenizer(x)[\"input_ids\"]) for x in train_dataset[\"prompt\"]], 95))\n",
+    "# max_seq_length_chosen = int(percentile([len(tokenizer(x[\"prompt\"] + x[\"chosen\"])[\"input_ids\"]) for x in train_dataset], 95))\n",
+    "# max_seq_length_rejected = int(percentile([len(tokenizer(x[\"prompt\"] + x[\"rejected\"])[\"input_ids\"]) for x in train_dataset], 95))\n",
     "# max_seq_length = max(max_seq_length_chosen, max_seq_length_rejected)\n",
     "\n",
     "# # filter datasets to remove samples that are too long\n",
@@ -303,11 +302,11 @@
     "# # Up the lengths to next multiple of 2, why 2? Don't know\n",
     "# prompt_length = ((prompt_length + 1) // 2) * 2\n",
     "# max_seq_length = ((max_seq_length + 1) // 2) * 2\n",
-    "# print(f\"p99 prompt length: {prompt_length}\")\n",
-    "# print(f\"p99 prompt + chosen length: {max_seq_length}\")\n",
+    "# print(f\"p95 prompt length: {prompt_length}\")\n",
+    "# print(f\"p95 prompt + chosen length: {max_seq_length}\")\n",
     "\n",
-    "prompt_length = 1292\n",
-    "max_seq_length = 1718"
+    "prompt_length = 1024\n",
+    "max_seq_length = 1512"
    ]
   },
   {
@@ -352,7 +351,8 @@
     "Before we can start our training we need to define the hyperparameters (`TrainingArguments`) & DPO parameters.\n",
     "\n",
     "Based on the [Alignment Handbook](https://github.com/huggingface/alignment-handbook) we know that we need to use a ~10-100x smaller learning rate for DPO compared to SFT. In our example we reduce the learning rate from 2e-4 (SFT) to 5e-5 (DPO) or 40x smaller.  \n",
-    "Another important parameter is the `beta` parameter, which is used to control the strength of the alignment. The bigger the `beta` is typically something in the range of 0.1 to 0.5. A higher beta means less divergence from the initial reference model or the text generations are very similar in terms of their probability distributions."
+    "\n",
+    "Another important parameter is the `beta` parameter, which is used to control the strength of the alignment. The bigger the `beta` is typically something in the range of 0.1 to 0.5. A higher beta means less divergence from the initial reference model or the text generations are very similar in terms of their probability distributions. In terms of training length, we go with `1` epoch, which is a good starting point. There is no rule of thumb for the number of epochs, it is also related to the number of epochs used for fine-tuning."
    ]
   },
   {
@@ -524,7 +524,6 @@
     "# Path to saved peft adapter model\n",
     "# peft_model_id = args.output_dir # or\n",
     "peft_model_id = \"./doplhin-dpo\" \n",
-    "peft_model_id = \"./checkpoint-1000\" \n",
     "\n",
     "# Load Model with PEFT adapter\n",
     "model = AutoPeftModelForCausalLM.from_pretrained(\n",
@@ -804,13 +803,6 @@
     "# delete the cloned repository\n",
     "!rm -rf FastChat"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
