--- a/training/dpo-align-llms-in-2024-with-trl.ipynb
+++ b/training/dpo-align-llms-in-2024-with-trl.ipynb
@@ -266,7 +266,7 @@
     "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
     "tokenizer.pad_token = tokenizer.eos_token\n",
     "tokenizer.padding_side = 'left' # to prevent errors with FA\n",
-    "tokenizer.truncation_side = 'right' # to prevent cutting off last generation"
+    "tokenizer.truncation_side = 'left' # to prevent cutting off last generation"
    ]
   },
   {
