--- a/training/gemma-lora-example.ipynb
+++ b/training/gemma-lora-example.ipynb
@@ -337,7 +337,7 @@
     "from peft import AutoPeftModelForCausalLM\n",
     "from transformers import  AutoTokenizer, pipeline\n",
     "\n",
-    "peft_model_id = \"philschmid/gemma-7b-dolly-chatml\"\n",
+    "peft_model_id = \"gemma-7b-dolly-chatml\"\n",
     "\n",
     "# Load Model with PEFT adapter\n",
     "tokenizer = AutoTokenizer.from_pretrained(peft_model_id)\n",
